<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginStart="@dimen/margin_30"
        android:layout_marginEnd="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_40">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_calculate_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_currency_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_index_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/constraint_index_right"
                app:layout_constraintHorizontal_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_source_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country_source"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textEnd"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_receipt_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country_receipt"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_source_left"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rate_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_rate"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_receipt_left"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_time_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_time"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rate_left"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_amount_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_of_money"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time_left"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_index_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/constraint_index_left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_source_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textStart"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_receipt_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textStart"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_source_right"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rate_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textStart"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_receipt_right"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_time_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_15"
                    android:textAlignment="textStart"
                    android:layout_marginTop="@dimen/margin_10"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rate_right"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_amount"
                    android:layout_width="@dimen/width_100"
                    android:layout_height="@dimen/height_10"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginTop="@dimen/margin_6"
                    android:background="@drawable/background_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time_right"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_amount_source"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_5"
                    app:layout_constraintTop_toBottomOf="@+id/tv_time_right"
                    app:layout_constraintStart_toEndOf="@id/et_amount"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/calculated_amount_will_be_shown_here"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_currency_info"
            app:layout_constraintBottom_toTopOf="@+id/number_picker"
            app:layout_constraintVertical_bias="0.169" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pick_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_receipt_country"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/number_picker"/>

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/layout_progress_bar"/>

    <include
        layout="@layout/layout_network_disconnected"/>

</androidx.constraintlayout.widget.ConstraintLayout>